objects/Medical_Record__x.object
<CustomObject>
    <fields>
        <fullName>Date__c</fullName>
        <externalDeveloperName>Date</externalDeveloperName>
        <label>Date</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Main_author__c</fullName>
        <externalDeveloperName>Main author</externalDeveloperName>
        <label>Main author</label>
        <length>255</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reviewed__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>Reviewed</externalDeveloperName>
        <label>Reviewed</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Summary__c</fullName>
        <externalDeveloperName>Summary</externalDeveloperName>
        <label>Summary</label>
        <length>500</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <externalDeveloperName>Title</externalDeveloperName>
        <label>Title</label>
        <length>255</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Text</type>
    </fields>
    <externalDataSource>OpenSearch</externalDataSource>
    <externalName>Medical Record</externalName>
    <label>Medical Record</label>
    <pluralLabel>Medical Record</pluralLabel>
</CustomObject>